set:프리즈마 세팅

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     restart: always
     environment:
       - TZ=Asia/Seoul
+      - DATABASE_URL=${DATABASE_URL}
     ports:
       - '8000:8000'
     depends_on:
