--- a/package.json
+++ b/package.json
@@ -21,21 +21,29 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.4.0",
+    "@prisma/client": "^5.19.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@nestjs/cli": "^10.0.0",
+    "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/estree": "^1.0.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/json-schema": "^7.0.15",
     "@types/node": "^20.3.1",
+    "@types/qs": "^6.9.15",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -45,6 +53,7 @@
     "husky": "^8.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.3.3",
+    "prisma": "^5.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
