--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,21 @@ services:
             - '5001:5432'
         networks:
             - techeerism
+    
+    pgadmin:
+        image: dpage/pgadmin4
+        restart: always
+        container_name: pgadmin4
+        user: root
+        ports:
+            - "5050:80"
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+        volumes:
+            - techeerism-db:/techeerism-db/pgadmin-data
+        networks:
+            - techeerism
 
 networks:
     techeerism:
