--- a/package.json
+++ b/package.json
@@ -11,24 +11,30 @@
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
-        "start:migrate:prod": "prisma migrate deploy --schema=./dist/prisma/schema.prisma && npm run start:prod",
+        "start:prod": "node dist/src/main.js",
+        "start:migrate:prod": "prisma migrate deploy --schema=./prisma/schema.prisma && npm run seed && npm run start:prod",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "seed": "ts-node prisma/seed.ts"
     },
     "dependencies": {
+        "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.4.1",
+        "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.4.1",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.0",
         "@prisma/client": "^5.19.0",
+        "cache-manager-ioredis": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "ioredis": "^5.4.1",
+        "nodemailer": "^6.9.15",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1"
     },
