--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,8 @@ services:
             context: .
             dockerfile: Dockerfile
         restart: always
-        environment:
-            - TZ=Asia/Seoul
-            - DATABASE_URL=${DATABASE_URL}
+        env_file:
+            - .env
         ports:
             - '8000:8000'
         depends_on:
