--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "cache-manager-ioredis": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "cookie-parser": "^1.4.6",
         "ioredis": "^5.4.1",
         "nodemailer": "^6.9.15",
         "reflect-metadata": "^0.2.0",
