--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: “3.8”
+version: '3.8'
 
 services:
     nest:
@@ -30,14 +30,14 @@ services:
             - '5001:5432'
         networks:
             - techeerism
-    
+
     pgadmin:
         image: dpage/pgadmin4
         restart: always
         container_name: pgadmin4
         user: root
         ports:
-            - "5050:80"
+            - '5050:80'
         environment:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
@@ -45,14 +45,14 @@ services:
             - techeerism-db:/techeerism-db/pgadmin-data
         networks:
             - techeerism
-    
+
     redis:
         container_name: redis
         image: redis:6.0.9-alpine
         restart: always
         ports:
             - '6379:6379'
-    
+
     redis-insight:
         container_name: redis-insight
         image: redislabs/redisinsight:latest
@@ -60,7 +60,7 @@ services:
         ports:
             - '8001:8001'
         networks:
-            - techeerism    
+            - techeerism
 
 networks:
     techeerism:
