--- a/package.json
+++ b/package.json
@@ -22,19 +22,28 @@
         "seed": "ts-node prisma/seed.ts"
     },
     "dependencies": {
+        "@nestjs/axios": "^3.1.0",
         "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.4.1",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.4.1",
+        "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "*",
+        "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.0",
-        "@prisma/client": "^5.19.0",
+        "@prisma/client": "^5.20.0",
+        "@types/passport-jwt": "^4.0.1",
+        "axios": "^1.7.7",
+        "bcryptjs": "^2.4.3",
         "cache-manager-ioredis": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "cookie-parser": "^1.4.6",
         "ioredis": "^5.4.1",
         "nodemailer": "^6.9.15",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1"
     },
