--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: '18'
-            - run: npm ci
-            - run: npm test
+            # - run: npm test
             - name: Show build number
               run: |
                   echo "Build Number: ${{ github.run_number }}"
