--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,13 @@ jobs:
               with:
                   node-version: '18'
 
+            - name: Install Dependencies
+              run: |
+                npm install
+
             - name: Run Tests and Generate Coverage
               run: |
-                  npm test -- --coverage
+                  npm run test:cov
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v3
               with:
