--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,13 +39,15 @@ jobs:
             - name: Run Tests and Generate Coverage
               run: |
                   npm run test:cov
+
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v3
               with:
-                  files: ./coverage/lcov.info
-                  flags: unittests
-                  name: codecov-coverage
-                  fail_ci_if_error: true
+                token: ${{ secrets.CODECOV_TOKEN }}
+                files: ./coverage/lcov.info
+                flags: unittests
+                name: codecov-coverage
+                fail_ci_if_error: true
 
             - name: Show build number
               run: |
