--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,11 +43,12 @@ jobs:
             - name: Upload coverage to Codecov
               uses: codecov/codecov-action@v3
               with:
-                token: ${{ secrets.CODECOV_TOKEN }}
-                files: ./coverage/lcov.info
-                flags: unittests
-                name: codecov-coverage
-                fail_ci_if_error: true
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  files: ./coverage/lcov.info
+                  flags: unittests
+                  name: codecov-coverage
+                  slug: Techeer-Hogwarts/nest
+                  fail_ci_if_error: true
 
             - name: Show build number
               run: |
