--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
+        "test:cov": "jest --coverage && codecov",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "seed": "ts-node prisma/seed.ts"
@@ -39,6 +39,7 @@
         "cache-manager-ioredis": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "codecov": "^3.8.3",
         "cookie-parser": "^1.4.6",
         "ioredis": "^5.4.1",
         "nodemailer": "^6.9.15",
