--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,8 @@ jobs:
               run: |
                   npm run test:cov
 
-            - name: Codecov
-              uses: codecov/codecov-action@v3
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v4
               with:
                 token: ${{ secrets.CODECOV_TOKEN }}
                 flags: unittests
