--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
               with:
                   token: ${{ secrets.CODECOV_TOKEN }}
                   flags: unittests # optional
+                  name: codecov-coverage
 
             - name: Show build number
               run: |
