--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,22 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   node-version: '18'
-            # - run: npm test
+
+            - name: Install Dependencies
+              run: |
+                  npm install
+
+            - name: Run Tests and Generate Coverage
+              run: |
+                  npm run test:cov
+
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v4
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
+                  flags: unittests # optional
+                  name: codecov-coverage
+
             - name: Show build number
               run: |
                   echo "Build Number: ${{ github.run_number }}"
