--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "cache-manager-ioredis": "^2.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "codecov": "^3.8.3",
         "cookie-parser": "^1.4.6",
         "ioredis": "^5.4.1",
         "nodemailer": "^6.9.15",
@@ -66,7 +67,7 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.0",
-        "jest": "^29.5.0",
+        "jest": "^29.7.0",
         "prettier": "^3.3.3",
         "prisma": "^5.19.0",
         "source-map-support": "^0.5.21",
