--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
         "paths": {
             "@nestjs/*": ["node_modules/@nestjs/*"]
         }
-    }
+    },
+    "include": ["src/**/*.ts"]
 }
