--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "class-validator": "^0.14.1",
         "codecov": "^3.8.3",
         "cookie-parser": "^1.4.6",
+        "express-basic-auth": "^1.2.1",
         "ioredis": "^5.4.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
