--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.8'
 
 services:
-    # nest:
-    #     container_name: nest
-    #     build:
-    #         context: .
-    #         dockerfile: Dockerfile
-    #     restart: always
-    #     env_file:
-    #         - .env
-    #     ports:
-    #         - '8000:8000'
-    #     depends_on:
-    #         - postgresql
-    #     networks:
-    #         - techeerism
+    nest:
+        container_name: nest
+        build:
+            context: .
+            dockerfile: Dockerfile
+        restart: always
+        env_file:
+            - .env
+        ports:
+            - '8000:8000'
+        depends_on:
+            - postgresql
+        networks:
+            - techeerism
 
     postgresql:
         container_name: postgresql
@@ -47,7 +47,7 @@ services:
             - techeerism
 
     redis:
-        container_name: rediszip
+        container_name: redis
         image: redis:6.0.9-alpine
         restart: always
         ports:
