--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
         restart: always
         ports:
             - '6379:6379'
+        networks:
+            - techeerism
 
     redis-insight:
         container_name: redis-insight
