--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
     nest:
@@ -13,6 +12,7 @@ services:
             - '8000:8000'
         depends_on:
             - postgresql
+            - redis
         networks:
             - techeerism
 
@@ -52,6 +52,9 @@ services:
         restart: always
         ports:
             - '6379:6379'
+        networks:
+            - techeerism
+
 
     redis-insight:
         container_name: redis-insight
