--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,10 @@ services:
             - '8000:8000'
         depends_on:
             - postgresql
+            - redis
         networks:
             - techeerism
+
 
     postgresql:
         container_name: postgresql
@@ -27,7 +29,7 @@ services:
         volumes:
             - techeerism-db:/techeerism-db/postgres-data
         ports:
-            - '5001:5432'
+            - '5432:5432'
         networks:
             - techeerism
 
@@ -52,6 +54,9 @@ services:
         restart: always
         ports:
             - '6379:6379'
+        networks:
+            - techeerism
+
 
     redis-insight:
         container_name: redis-insight
@@ -61,6 +66,7 @@ services:
             - '8001:8001'
         networks:
             - techeerism
+
 
 networks:
     techeerism:
