--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
-        "@nestjs/swagger": "^7.4.0",
-        "@prisma/client": "^5.20.0",
+        "@nestjs/swagger": "^7.4.2",
+        "@prisma/client": "^6.0.1",
         "@types/passport-jwt": "^4.0.1",
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
@@ -47,7 +47,8 @@
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "swagger-ui-express": "^5.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
@@ -70,7 +71,7 @@
         "husky": "^8.0.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
-        "prisma": "^5.19.0",
+        "prisma": "^6.0.1",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.0",
