--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "seed": "node dist/prisma/seed.js"
     },
     "dependencies": {
+        "@golevelup/nestjs-rabbitmq": "^5.6.1",
         "@nestjs/axios": "^3.1.0",
         "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.4.1",
@@ -34,6 +35,7 @@
         "@nestjs/swagger": "^7.4.0",
         "@prisma/client": "^5.20.0",
         "@types/passport-jwt": "^4.0.1",
+        "amqplib": "^0.10.5",
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
         "cache-manager-ioredis": "^2.1.0",
@@ -54,6 +56,7 @@
         "@nestjs/cli": "^10.4.5",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@types/amqplib": "^0.10.6",
         "@types/eslint__js": "^8.42.3",
         "@types/estree": "^1.0.5",
         "@types/express": "^4.17.17",
@@ -71,6 +74,7 @@
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
         "prisma": "^5.19.0",
+        "redis": "^4.7.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.0",
