--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
     postgresql:
         container_name: postgresql
-        image: postgres:12.0-alpine
+        image: postgres:14-alpine3.20
         restart: always
         environment:
             POSTGRES_USER: ${POSTGRES_USERNAME}
