--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "seed": "node dist/prisma/seed.js"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.712.0",
         "@nestjs/axios": "^3.1.0",
         "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.4.1",
@@ -32,7 +33,7 @@
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.2",
-        "@prisma/client": "^6.0.1",
+        "@prisma/client": "^5.19.0",
         "@types/passport-jwt": "^4.0.1",
         "axios": "^1.7.7",
         "bcryptjs": "^2.4.3",
@@ -43,6 +44,7 @@
         "cookie-parser": "^1.4.6",
         "express-basic-auth": "^1.2.1",
         "ioredis": "^5.4.1",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
@@ -55,11 +57,13 @@
         "@nestjs/cli": "^10.4.5",
         "@nestjs/schematics": "^10.0.0",
         "@nestjs/testing": "^10.0.0",
+        "@prisma/client": "^5.19.0",
         "@types/eslint__js": "^8.42.3",
         "@types/estree": "^1.0.5",
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/json-schema": "^7.0.15",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.3.1",
         "@types/qs": "^6.9.15",
         "@types/supertest": "^6.0.0",
@@ -71,7 +75,7 @@
         "husky": "^8.0.0",
         "jest": "^29.7.0",
         "prettier": "^3.3.3",
-        "prisma": "^6.0.1",
+        "prisma": "^5.19.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.1.0",
