--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: '3.8'
 
 services:
-#    nest:
-#        container_name: nest
-#        build:
-#            context: .
-#            dockerfile: Dockerfile
-#        restart: always
-#        env_file:
-#            - .env
-#        ports:
-#            - '8000:8000'
-#        depends_on:
-#            - postgresql
-#        networks:
-#            - techeerism
+    #    nest:
+    #        container_name: nest
+    #        build:
+    #            context: .
+    #            dockerfile: Dockerfile
+    #        restart: always
+    #        env_file:
+    #            - .env
+    #        ports:
+    #            - '8000:8000'
+    #        depends_on:
+    #            - postgresql
+    #        networks:
+    #            - techeerism
 
     postgresql:
         container_name: postgresql
@@ -47,11 +47,11 @@ services:
             - techeerism
 
     hogwartsmq:
-        image: "rabbitmq:3-management"
+        image: 'rabbitmq:3-management'
         ports:
-            - "5672:5672"
-            - "15673:15672"
-            - "15693:15692"
+            - '5672:5672'
+            - '15673:15672'
+            - '15693:15692'
         environment:
             - RABBITMQ_DEFAULT_USER=guest
             - RABBITMQ_DEFAULT_PASS=guest
