--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/schedule": "^4.1.2",
         "@nestjs/swagger": "^7.4.0",
         "@prisma/client": "^5.20.0",
         "@types/passport-jwt": "^4.0.1",
@@ -62,7 +63,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/json-schema": "^7.0.15",
-        "@types/node": "^20.3.1",
+        "@types/node": "^20.17.10",
         "@types/qs": "^6.9.15",
         "@types/supertest": "^6.0.0",
         "@typescript-eslint/eslint-plugin": "^7.0.0",
