--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 
 services:
-    nest:
-        container_name: nest
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        env_file:
-            - .env
-        ports:
-            - '8000:8000'
-        depends_on:
-            - postgresql
-            - redis
-        networks:
-            - techeerism
+#    nest:
+#        container_name: nest
+#        build:
+#            context: .
+#            dockerfile: Dockerfile
+#        restart: always
+#        env_file:
+#            - .env
+#        ports:
+#            - '8000:8000'
+#        depends_on:
+#            - postgresql
+#            - redis
+#        networks:
+#            - techeerism
 
     postgresql:
         container_name: postgresql
