--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "seed": "node dist/prisma/seed.js"
     },
     "dependencies": {
+        "@google-cloud/secret-manager": "^5.6.0",
         "@nestjs/axios": "^3.1.0",
         "@nestjs/cache-manager": "^2.2.2",
         "@nestjs/common": "^10.4.1",
@@ -30,7 +31,7 @@
         "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^10.0.3",
-        "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/platform-express": "^10.4.15",
         "@nestjs/swagger": "^7.4.0",
         "@prisma/client": "^5.20.0",
         "@types/passport-jwt": "^4.0.1",
@@ -42,7 +43,9 @@
         "codecov": "^3.8.3",
         "cookie-parser": "^1.4.6",
         "express-basic-auth": "^1.2.1",
+        "googleapis": "^144.0.0",
         "ioredis": "^5.4.1",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
@@ -56,9 +59,10 @@
         "@nestjs/testing": "^10.0.0",
         "@types/eslint__js": "^8.42.3",
         "@types/estree": "^1.0.5",
-        "@types/express": "^4.17.17",
+        "@types/express": "^4.17.21",
         "@types/jest": "^29.5.2",
         "@types/json-schema": "^7.0.15",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.3.1",
         "@types/qs": "^6.9.15",
         "@types/supertest": "^6.0.0",
