--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "seed": "node dist/prisma/seed.js"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.717.0",
         "@golevelup/nestjs-rabbitmq": "^5.6.1",
         "@nestjs/axios": "^3.1.0",
         "@nestjs/cache-manager": "^2.2.2",
@@ -60,9 +61,10 @@
         "@types/amqplib": "^0.10.6",
         "@types/eslint__js": "^8.42.3",
         "@types/estree": "^1.0.5",
-        "@types/express": "^4.17.17",
+        "@types/express": "^4.17.21",
         "@types/jest": "^29.5.2",
         "@types/json-schema": "^7.0.15",
+        "@types/multer": "^1.4.12",
         "@types/node": "^20.17.10",
         "@types/qs": "^6.9.15",
         "@types/supertest": "^6.0.0",
