--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,16 +47,18 @@ services:
         networks:
             - techeerism
 
-    hogwartsmq:
+    rabbitmq:
         image: 'rabbitmq:3-management'
         ports:
             - '5672:5672'
             - '15673:15672'
             - '15693:15692'
         environment:
-            - RABBITMQ_DEFAULT_USER=guest
-            - RABBITMQ_DEFAULT_PASS=guest
+            - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+            - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
         tty: true
+        networks:
+            - techeerism
 
     redis:
         container_name: redis
