--- a/package.json
+++ b/package.json
@@ -51,11 +51,13 @@
         "googleapis": "^144.0.0",
         "ioredis": "^5.4.1",
         "multer": "^1.4.5-lts.1",
+        "nest-winston": "^1.10.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
