--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 version: '3.8'
 
 services:
-    nest:
-        container_name: nest
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        env_file:
-            - .env
-        ports:
-            - '8000:8000'
-        depends_on:
-            - postgresql
-            - redis
-        networks:
-            - techeerism
+    # nest:
+    #    container_name: nest
+    #    build:
+    #        context: .
+    #        dockerfile: Dockerfile
+    #    restart: always
+    #    env_file:
+    #        - .env
+    #    ports:
+    #        - '8000:8000'
+    #    depends_on:
+    #        - postgresql
+    #        - redis
+    #    networks:
+    #        - techeerism
 
     postgresql:
         container_name: postgresql
@@ -25,6 +25,7 @@ services:
             POSTGRES_USER: ${POSTGRES_USERNAME}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_DB: ${POSTGRES_DB}
+            # POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
         volumes:
             - techeerism-db:/techeerism-db/postgres-data
         ports:
