--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
             POSTGRES_USER: ${POSTGRES_USERNAME}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_DB: ${POSTGRES_DB}
-            POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
+            # POSTGRES_DB_NAME: ${POSTGRES_DB_NAME}
         volumes:
             - techeerism-db:/techeerism-db/postgres-data
         ports:
