--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,16 +36,16 @@ jobs:
               run: |
                   npm install
 
-            - name: Run Tests and Generate Coverage
-              run: |
-                  npm run test:cov
+            # - name: Run Tests and Generate Coverage
+            #   run: |
+            #       npm run test:cov
 
-            - name: Upload coverage to Codecov
-              uses: codecov/codecov-action@v4
-              with:
-                  token: ${{ secrets.CODECOV_TOKEN }}
-                  flags: unittests # optional
-                  name: codecov-coverage
+            # - name: Upload coverage to Codecov
+            #   uses: codecov/codecov-action@v4
+            #   with:
+            #       token: ${{ secrets.CODECOV_TOKEN }}
+            #       flags: unittests # optional
+            #       name: codecov-coverage
 
             - name: Show build number
               run: |
