--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
         "@types/node": "^20.17.10",
         "@types/qs": "^6.9.15",
         "@types/supertest": "^6.0.0",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.25.0",
+        "@typescript-eslint/parser": "^8.25.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.0.0",
@@ -91,7 +91,7 @@
         "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.2.0",
         "typescript": "^5.5.4",
-        "typescript-eslint": "^8.2.0"
+        "typescript-eslint": "8.2.0"
     },
     "jest": {
         "moduleFileExtensions": [
