--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -74,6 +74,6 @@ jobs:
                         "imageName": "'"$IMAGE_NAME"'",
                         "imageTag": "'"$DOCKER_IMAGE_TAG"'",
                         "commitLink": "'"$commit_link"'",
-                        "enviroment": "staging",
+                        "environment": "staging",
                         "secret": "'"$SLACK_SECRET"'"
                       }'
