--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,55 @@ services:
             - '8001:8001'
         networks:
             - techeerism
+    
+    search-container:
+        image: suhach0523/techeerism-search:latest
+        networks:
+            - techeerism
+        container_name: search-container
+        env_file:
+            - .env
+        environment:
+            - MEILISEARCH_ADDR=http://meilisearch:7700
+            - MEILISEARCH_KEY=""
+            - GIN_MODE=release
+        ports:
+            - "8082:8080"
+  
+    search-cron:
+        image: suhach0523/techeerism-cron:latest
+        container_name: search-cron
+        networks:
+            - techeerism
+        env_file:
+            - .env
+        environment:
+            - MEILISEARCH_ADDR=http://meilisearch:7700
+            - MEILISEARCH_KEY=""
+            - GIN_MODE=release
+            - DB_HOST=postgresql
+            - DB_PORT=5432
+            - DB_USER=${POSTGRES_USERNAME}
+            - DB_PASSWORD=${POSTGRES_PASSWORD}
+            - DB_NAME=${POSTGRES_DB}
+            - DB_SSL_MODE=disable
+        ports:
+            - "8081:8081"
+   
+    meilisearch:
+        image: getmeili/meilisearch:latest
+        container_name: meilisearch
+        networks:
+            - techeerism
+        ports:
+            - "7700:7700"
+        environment:
+            - MEILI_MASTER_KEY=""
+            - MEILI_EXPERIMENTAL_ENABLE_METRICS=true
+            - MEILI_NO_ANALYTICS=true
+        volumes:
+            - meilisearch-data:/meili_data/data.ms
+        restart: unless-stopped
 
 networks:
     techeerism:
@@ -88,3 +137,4 @@ networks:
 
 volumes:
     techeerism-db:
+    meilisearch-data:
