--- a/package.json
+++ b/package.json
@@ -50,11 +50,15 @@
         "express-basic-auth": "^1.2.1",
         "googleapis": "^144.0.0",
         "ioredis": "^5.4.1",
+        "kysely": "^0.27.6",
         "multer": "^1.4.5-lts.1",
         "nest-winston": "^1.10.1",
         "nodemailer": "^6.9.15",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "pg": "^8.14.1",
+        "prisma-extension-kysely": "^3.0.0",
+        "prisma-kysely": "^1.8.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "winston": "^3.17.0"
