--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/schedule": "^4.1.2",
         "@nestjs/swagger": "^7.4.0",
+        "@opentelemetry/api": "^1.9.0",
+        "@opentelemetry/instrumentation-express": "^0.48.0",
+        "@opentelemetry/instrumentation-http": "^0.200.0",
+        "@opentelemetry/resources": "^2.0.0",
+        "@opentelemetry/sdk-node": "^0.200.0",
         "@prisma/client": "^5.20.0",
+        "@prisma/instrumentation": "^6.5.0",
         "@types/passport-jwt": "^4.0.1",
         "amqplib": "^0.10.5",
         "axios": "^1.7.7",
