--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
         "@nestjs/schedule": "^4.1.2",
         "@nestjs/swagger": "^7.4.0",
         "@opentelemetry/api": "^1.9.0",
+        "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
         "@opentelemetry/instrumentation-express": "^0.48.0",
         "@opentelemetry/instrumentation-http": "^0.200.0",
         "@opentelemetry/resources": "^2.0.0",
         "@opentelemetry/sdk-node": "^0.200.0",
+        "@opentelemetry/semantic-conventions": "^1.30.0",
         "@prisma/client": "^5.20.0",
         "@prisma/instrumentation": "^6.5.0",
         "@types/passport-jwt": "^4.0.1",
