add rabbitmq and redis support

--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
         "@nestjs/swagger": "^7.4.0",
         "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
         "@opentelemetry/instrumentation": "^0.200.0",
+        "@opentelemetry/instrumentation-amqplib": "^0.47.0",
         "@opentelemetry/instrumentation-express": "^0.48.0",
         "@opentelemetry/instrumentation-http": "^0.200.0",
+        "@opentelemetry/instrumentation-ioredis": "^0.48.0",
         "@opentelemetry/instrumentation-nestjs-core": "^0.45.0",
         "@opentelemetry/resources": "^2.0.0",
         "@opentelemetry/sdk-node": "^0.200.0",
+        "@opentelemetry/sdk-trace-base": "^2.0.0",
         "@opentelemetry/semantic-conventions": "^1.30.0",
         "@prisma/client": "^6.5.0",
         "@prisma/instrumentation": "^6.5.0",
