--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "eslint-plugin-prettier": "^5.0.0",
         "husky": "^8.0.0",
         "jest": "^29.7.0",
+        "jest-mock-extended": "^4.0.0-beta1",
         "prettier": "^3.3.3",
         "prisma": "^6.5.0",
         "redis": "^4.7.0",
